--- a/snake/snake.html
+++ b/snake/snake.html
@@ -5,9 +5,16 @@
   <style>
     body {
       background: #444;
+      text-align: center;
+      margin: 64px 0 0 0;
     }
     canvas {
       border: solid 8px white;
+      background: linear-gradient(
+        0deg,
+        rgba(125, 60, 152, 1.0) 0%,
+        rgba(211, 84, 0, 1.0) 100%
+      );
     }
   </style>
 </head>
@@ -23,38 +30,41 @@
   const SQUARE_SIZE = 10;
   const BOARD_WIDTH = 50;
   const BOARD_HEIGHT = 50;
-  const GROW_SCALE = 100;  
+  const GROW_SCALE = 10;  
   const DIRECTIONS_MAP = {
-    65:  [-1, 0], // A
-    68:  [ 1, 0], // D
-    83:  [ 0, 1], // S
-    87:  [ 0,-1], // W
-    97:  [-1, 0], // a
-    100: [ 1, 0], // d
-    115: [ 0, 1], // s
-    119: [ 0,-1], // w
+    'A': [-1, 0],
+    'D': [ 1, 0],
+    'S': [ 0, 1],
+    'W': [ 0,-1],
+    'a': [-1, 0],
+    'd': [ 1, 0],
+    's': [ 0, 1],
+    'w': [ 0,-1],
   };
   
   let state = {
     canvas: null,
     context: null,
-    snake: [[0, 0]],
-    direction: [1, 0],
-    prey: [10, 10],
+    snake: [{x: 0, y: 0}],
+    direction: {x: 1, y: 0},
+    prey: {x: 10, y: 10},
     growing: 0,
     runState: STATE_RUNNING,
   };
 
   function tick() {
     const head = state.snake[0];
-    const tail = [...state.snake[state.snake.length - 1]];
-    const [dx, dy] = state.direction;
+    const dx = state.direction.x;
+    const dy = state.direction.y;
     const highestIndex = state.snake.length - 1;
+    let tail = {};
     let interval;
+
+    Object.assign(tail, state.snake[state.snake.length - 1]);
     
     let didScore = (
-      head[0] === state.prey[0]
-      && head[1] === state.prey[1]
+      head.x === state.prey.x
+      && head.y === state.prey.y
     );
 
     if (state.runState === STATE_RUNNING) {
@@ -62,11 +72,11 @@
         const sq = state.snake[idx];
 
         if (idx === 0) {
-          sq[0] += dx;
-          sq[1] += dy;
+          sq.x += dx;
+          sq.y += dy;
         } else {
-          sq[0] = state.snake[idx - 1][0];
-          sq[1] = state.snake[idx - 1][1];
+          sq.x = state.snake[idx - 1].x;
+          sq.y = state.snake[idx - 1].y;
         }
       }
       interval = TICK;
@@ -79,11 +89,14 @@
 
       if (state.snake.length === 0) {
         state.runState = STATE_RUNNING;
-        state.snake.push([BOARD_WIDTH / 2, BOARD_HEIGHT / 2]);
-        state.prey = [
-          parseInt(Math.random() * BOARD_WIDTH),
-          parseInt(Math.random() * BOARD_HEIGHT),
-        ];
+        state.snake.push({
+          x: BOARD_WIDTH / 2,
+          y: BOARD_HEIGHT / 2
+        });
+        state.prey = {
+          x: parseInt(Math.random() * BOARD_WIDTH),
+          y: parseInt(Math.random() * BOARD_HEIGHT),
+        };
       }
     }
 
@@ -94,10 +107,10 @@
 
     if (didScore) {
       state.growing += GROW_SCALE;
-      state.prey = [
-        parseInt(Math.random() * BOARD_WIDTH),
-        parseInt(Math.random() * BOARD_HEIGHT),
-      ];
+      state.prey = {
+        x: parseInt(Math.random() * BOARD_WIDTH),
+        y: parseInt(Math.random() * BOARD_HEIGHT),
+      };
     }
 
     if (state.growing > 0) {
@@ -110,17 +123,17 @@
   }
 
   function detectCollision() {
-    if (state.snake[0][0] < 0
-      || state.snake[0][0] >= BOARD_WIDTH
-      || state.snake[0][1] >= BOARD_HEIGHT
-      || state.snake[0][1] < 0
+    if (state.snake[0].x < 0
+      || state.snake[0].x >= BOARD_WIDTH
+      || state.snake[0].y >= BOARD_HEIGHT
+      || state.snake[0].y < 0
     ) {
       return true;
     }
 
     for (var idx = 1; idx < state.snake.length; idx++) {
-      if (state.snake[idx][0] === state.snake[0][0]
-        && state.snake[idx][1] === state.snake[0][1]) {
+      if (state.snake[idx].x === state.snake[0].x
+        && state.snake[idx].y === state.snake[0].y) {
         return true;
       }
     }
@@ -141,11 +154,11 @@
     state.context.clearRect(0, 0, 500, 500);
 
     for (var idx = 0; idx < state.snake.length; idx++) {
-      const [x, y] = state.snake[idx];
+      const {x, y} = state.snake[idx];
       drawPixel('#22dd22', x, y);
     }
 
-    const [x, y] = state.prey;
+    const {x, y} = state.prey;
     drawPixel('yellow', x, y);
   }
 
@@ -154,13 +167,15 @@
     state.context = state.canvas.getContext('2d');
 
     window.onkeydown = function(e) {
-      const direction = DIRECTIONS_MAP[e.keyCode];
+      const direction = DIRECTIONS_MAP[e.key];
+
       if (direction) {
-        const [dx, dy] = direction;
-        if (-dx !== state.direction[0]
-          && -dy !== state.direction[1])
+        const [x, y] = direction;
+        if (-x !== state.direction.x
+          && -y !== state.direction.y)
         {
-          state.direction = direction;
+          state.direction.x = x;
+          state.direction.y = y;
         }
       }
     };
