--- a/lineas/euclides-guide.html
+++ b/lineas/euclides-guide.html
@@ -87,10 +87,7 @@ window.onresize = function() {
   update();
 }
 
-window.onload = function() {
-  window.onresize();
-  update();
-}
+window.onload = window.onresize;
 
 </script>
 
