Adde final bounce file.

--- a/animation/bounce/bounce-guide.html
+++ b/animation/bounce/bounce-guide.html
@@ -4,7 +4,10 @@
     <title>Bounce</title>
     <style>
       body { background: #333; margin: 32px; }
-      #canvas { border: solid 10px white; background: linear-gradient(green, purple); }
+      #canvas {
+        border: solid 10px white;
+        background: linear-gradient(green, purple);
+      }
     </style>
   </head>
   <body>
